# vendor_qcom_opensource_commonsys-intf_display

libqdmetadata/: Android.bp  Makefile.am  qdMetaData.cpp
